= Asciidoctor IntelliJ Plugin Changelog

== About

This document provides a high-level view of the changes introduced by release.

[[releasenotes]]
== Release notes

=== 0.30.50 (preview, available from GitHub releases)

- index TODOs only in comments for TODO window (#452)
- improve parser/lexer to support continuation after hard break (again)

=== 0.30.49 (preview, available from GitHub releases)

- improving link validation with Antora (#449)
- improving passthrough detection in lexer (#449)

=== 0.30.48 (preview, available from GitHub releases)

- don't create an anchor via intent for a section when one is already present (#446)
- improve parser/lexer to support continuation after hard break
- fix focus problems when switching preview modes using keyboard macros (#448)
- improve checking reference anchors and resolving (#436)
- recognize open block with style source as listing (#401)
- Resolve two colons (`::`) as ROOT module in Antora modules instead of current module (#449)

=== 0.30.47 (preview, available from GitHub releases)

- speedup lookups, validations and search-everywhere by using stub-based in indexes for block IDs and sections (#439)
- allow creating missing files from link and xref inline macros (#440)
- allow callouts with a dot instead of a number (`<.>`) to be parsed and re-formatted correctly (#443)

=== 0.30.46 (preview, available from GitHub releases)

- xrefs can point to local anchors without a prefixed hash (`#`) (#427)
- support adding section titles if anchor points to block ID (#378)
- supporting front matter style header in AsciiDoc files (#434)
- treat numbers correctly for constrained/unconstrained formatting detection in syntax highlighting
- intent to add the automatic block ID explicitly to a section (#435)
- check the pattern of block IDs and reference anchors, also test if anchors resolve (#436)
- suppress inspections for a single line or a complete file using a line comment (#436)