@@ -11,6 +11,7 @@ This document provides a high-level view of the changes introduced by release.
 
 - index TODOs only in comments for TODO window (#452)
 - improve parser/lexer to support continuation after hard break (again)
+- new live template to surround some selected text with tag comments to use in an include (#450)
 
 === 0.30.49 (preview, available from GitHub releases)
 
